--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,10 @@
     "framer-motion": "^10.16.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "react-scrollable-feed": "^1.3.2",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
