--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,19 +1,24 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "proxy": "http://127.0.0.1:5000",
+  "proxy": "http://127.0.0.1:5000/",
   "private": true,
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@material-tailwind/react": "^2.1.8",
+    "@mui/icons-material": "^5.15.2",
+    "@mui/material": "^5.15.2",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.10",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "css-loader": "^6.8.1",
     "framer-motion": "^10.16.5",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
@@ -22,7 +27,9 @@
     "react-scrollable-feed": "^1.3.2",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
+    "socket.io-client": "^4.7.2",
     "style-loader": "^3.3.3",
+    "styled-components": "^6.1.6",
     "vanta": "^0.5.24",
     "web-vitals": "^2.1.4"
   },
